dokumentacja nowego sprintu
dokumentacja nowego sprintu

--- a/dokumentacja/zpi_doc_template.tex
+++ b/dokumentacja/zpi_doc_template.tex
@@ -430,13 +430,56 @@ Poprawi³em funkcjonalnoœæ aplikacji poprzez rozdzielenie opcji menu dla pracowni
 \subparagraph{Wykonawca.} Jakub Wêglarz.
 \subparagraph{Realizacja.} Zadanie przerzucone na nastêpny sprint z powodu zbyt du¿ej z³o¿onoœci.
 
-\paragraph{<<Tutaj dodawaæ kolejne zadania>>}
 
 
 \subsection{Sprint Review/Demo}
 <<Sprawozdanie z przegl¹du Sprint'u -- czy za³o¿ony cel (przyrost) zosta³ osi¹gniêty oraz czy wszystkie zaplanowane Backlog Item'y zosta³y zrealizowane? Demostracja przyrostu produktu>>.
 
-\section*{<<Tutaj dodawaæ kolejne Sprint'y>>}
+
+
+\subsection{Cel} Celem trzeciego sprintu jest przyrost funkcjonalnoœci zwi¹zany z obs³ug¹ zabezpieczeñ (podzia³ stron dostêpnych dla klienta i pracownika), generowaniem zestawieñ oraz obs³ug¹ faktur.
+
+\subsection{Sprint Planning/Backlog}
+
+\paragraph{Tytu³ zadania.} Dodawanie i edycja danych osbowych.
+\begin{itemize}
+	\item Estymata: XL
+\end{itemize}
+
+\paragraph{Tytu³ zadania.} Generowanie faktur.
+\begin{itemize}
+	\item Estymata: XXL
+\end{itemize}
+
+\paragraph{Tytu³ zadania.} Zestawienia sprzeda¿y.
+\begin{itemize}
+	\item Estymata: XXL
+\end{itemize}
+
+
+\subsection{Realizacja}
+
+
+\paragraph{Tytu³ zadania.} Dodawanie i edycja danych osobowych
+\subparagraph{Wykonawca.} £ukasz Wide³
+\subparagraph{Realizacja.} 
+
+
+
+\paragraph{Tytu³ zadania.} Generowanie faktur
+\subparagraph{Wykonawca.} Jakub Wêglarz
+\subparagraph{Realizacja.} 
+
+
+\paragraph{Tytu³ zadania.} Zestawienia sprzeda¿y
+\subparagraph{Wykonawca.} Micha³ W¹cha³a
+\subparagraph{Realizacja.} 
+
+\paragraph{<<Tutaj dodawaæ kolejne zadania>>}
+
+
+\subsection{Sprint Review/Demo}
+<<Sprawozdanie z przegl¹du Sprint'u -- czy za³o¿ony cel (przyrost) zosta³ osi¹gniêty oraz czy wszystkie zaplanowane Backlog Item'y zosta³y zrealizowane? Demostracja przyrostu produktu>>.
 
 
 \begin{thebibliography}{9}
