--- a/dokumentacja/zpi_doc_template.tex
+++ b/dokumentacja/zpi_doc_template.tex
@@ -433,7 +433,7 @@ Poprawi³em funkcjonalnoœæ aplikacji poprzez rozdzielenie opcji menu dla pracowni
 
 
 \subsection{Sprint Review/Demo}
-<<Sprawozdanie z przegl¹du Sprint'u -- czy za³o¿ony cel (przyrost) zosta³ osi¹gniêty oraz czy wszystkie zaplanowane Backlog Item'y zosta³y zrealizowane? Demostracja przyrostu produktu>>.
+Zaplanowany przyrost zosta³ osi¹gniêty z wy³¹czeniem generowania faktur, prezentacja przebieg³a pomyœlnie, pozosta³e funkcjonalnoœci programu dzia³aj¹ bez zastrze¿eñ. Nale¿y dodaæ domyœlne zaznaczenie opcji przy wyszukiwaniu produktu.
 
 
 
