edycja danych cd...

--- a/dokumentacja/zpi_doc_template.tex
+++ b/dokumentacja/zpi_doc_template.tex
@@ -463,6 +463,7 @@ Zaplanowany przyrost zosta³ osi¹gniêty z wy³¹czeniem generowania faktur, prezent
 \paragraph{Tytu³ zadania.} Dodawanie i edycja danych osobowych
 \subparagraph{Wykonawca.} £ukasz Wide³
 \subparagraph{Realizacja.} 
+Utworzy³em skrypt dziêki któremu zosta³a rozszerzona funkcjonalnoœæ aplikacji w postaci edycji danych osobowych klienta. Skrypt znajduje siê w pliku edytujdaneosobowe.php. Mo¿emy zmieniæ imiê, nazwisko, ulicê, miasto, kod pocztowy, numer telefonu czy NIP.
 
 
 
