--- a/dokumentacja/zpi_doc_template.tex
+++ b/dokumentacja/zpi_doc_template.tex
@@ -436,8 +436,8 @@ Poprawi³em funkcjonalnoœæ aplikacji poprzez rozdzielenie opcji menu dla pracowni
 Zaplanowany przyrost zosta³ osi¹gniêty z wy³¹czeniem generowania faktur, prezentacja przebieg³a pomyœlnie, pozosta³e funkcjonalnoœci programu dzia³aj¹ bez zastrze¿eñ. Nale¿y dodaæ domyœlne zaznaczenie opcji przy wyszukiwaniu produktu.
 
 
-
-\subsection{Cel} Celem trzeciego sprintu jest przyrost funkcjonalnoœci zwi¹zany z obs³ug¹ zabezpieczeñ (podzia³ stron dostêpnych dla klienta i pracownika), generowaniem zestawieñ oraz obs³ug¹ faktur.
+\section{Sprint 3}
+\subsection{Cel} Celem trzeciego sprintu jest przyrost funkcjonalnoœci zwi¹zany z generowaniem zestawieñ, obs³ug¹ faktur oraz edycj¹ danych osobowych.
 
 \subsection{Sprint Planning/Backlog}
 
@@ -463,7 +463,7 @@ Zaplanowany przyrost zosta³ osi¹gniêty z wy³¹czeniem generowania faktur, prezent
 \paragraph{Tytu³ zadania.} Dodawanie i edycja danych osobowych
 \subparagraph{Wykonawca.} £ukasz Wide³
 \subparagraph{Realizacja.} 
-Utworzy³em skrypt dziêki któremu zosta³a rozszerzona funkcjonalnoœæ aplikacji w postaci edycji danych osobowych klienta. Skrypt znajduje siê w pliku edytujdaneosobowe.php. Mo¿emy zmieniæ imiê, nazwisko, ulicê, miasto, kod pocztowy, numer telefonu czy NIP.
+Utworzy³em skrypt dziêki któremu zosta³a rozszerzona funkcjonalnoœæ aplikacji w postaci edycji danych osobowych klienta. Skrypt znajduje siê w pliku edytujdaneosobowe.php.
 
 
 
@@ -474,13 +474,84 @@ Utworzy³em skrypt dziêki któremu zosta³a rozszerzona funkcjonalnoœæ aplikacji w 
 
 \paragraph{Tytu³ zadania.} Zestawienia sprzeda¿y
 \subparagraph{Wykonawca.} Micha³ W¹cha³a
-\subparagraph{Realizacja.} 
-
-\paragraph{<<Tutaj dodawaæ kolejne zadania>>}
+\subparagraph{Realizacja.} Utworzy³em wstêpne skrypty w jêzyku SQL s³u¿¹ce do generowania zestawieñ.
 
 
 \subsection{Sprint Review/Demo}
-<<Sprawozdanie z przegl¹du Sprint'u -- czy za³o¿ony cel (przyrost) zosta³ osi¹gniêty oraz czy wszystkie zaplanowane Backlog Item'y zosta³y zrealizowane? Demostracja przyrostu produktu>>.
+Zadania zawarte w bie¿¹cym sprincie okaza³y siê zbyt obszerne. Uda³o siê wykonaæ je tylko czêœciowo, niestety nie ma mo¿liwoœci zaprezentowaæ kompletnej wersji ¿adnego z nich.
+
+\section{Sprint 4}
+\subsection{Cel} Celem trzeciego sprintu jest przyrost funkcjonalnoœci zwi¹zany z generowaniem zestawieñ, obs³ug¹ faktur oraz edycj¹ danych osobowych.
+
+\subsection{Sprint Planning/Backlog}
+
+\paragraph{Tytu³ zadania.} Dodawanie i edycja danych osbowych.
+\begin{itemize}
+	\item Estymata: XL
+\end{itemize}
+
+\paragraph{Tytu³ zadania.} Zamówienie towaru do magazynu.
+\begin{itemize}
+	\item Estymata: XL
+\end{itemize}
+
+\paragraph{Tytu³ zadania.} Dodawanie i edycja danych osbowych.
+\begin{itemize}
+	\item Estymata: XL
+\end{itemize}
+
+\paragraph{Tytu³ zadania.} Generowanie faktur.
+\begin{itemize}
+	\item Estymata: XXL
+\end{itemize}
+
+\paragraph{Tytu³ zadania.} Faktura na email.
+\begin{itemize}
+	\item Estymata: XL
+\end{itemize}
+
+\paragraph{Tytu³ zadania.} Zestawienia sprzeda¿y.
+\begin{itemize}
+	\item Estymata: XXL
+\end{itemize}
+
+\paragraph{Tytu³ zadania.} Edycja z poziomu podgl¹du.
+\begin{itemize}
+	\item Estymata: XXL
+\end{itemize}
+
+
+\subsection{Realizacja}
+
+
+\paragraph{Tytu³ zadania.} Dodawanie i edycja danych osobowych
+\subparagraph{Wykonawca.} £ukasz Wide³
+\subparagraph{Realizacja.} 
+
+
+\paragraph{Tytu³ zadania.} Generowanie faktur
+\subparagraph{Wykonawca.} Jakub Wêglarz
+\subparagraph{Realizacja.} 
+
+
+\paragraph{Tytu³ zadania.} Zestawienia sprzeda¿y
+\subparagraph{Wykonawca.} Micha³ W¹cha³a
+\subparagraph{Realizacja.}
+
+\paragraph{Tytu³ zadania.} Zamówienie towaru do magazynu
+\subparagraph{Wykonawca.} £ukasz Wide³
+\subparagraph{Realizacja.} 
+
+
+\paragraph{Tytu³ zadania.} Faktura na email
+\subparagraph{Wykonawca.} Jakub Wêglarz
+\subparagraph{Realizacja.} 
+
+
+\paragraph{Tytu³ zadania.} Edycja z poziomu podgl¹du
+\subparagraph{Wykonawca.} Micha³ W¹cha³a
+\subparagraph{Realizacja.}
+
 
 
 \begin{thebibliography}{9}
