--- a/dokumentacja/zpi_doc_template.tex
+++ b/dokumentacja/zpi_doc_template.tex
@@ -485,17 +485,12 @@ Zadania zawarte w bie¿¹cym sprincie okaza³y siê zbyt obszerne. Uda³o siê wykonaæ
 
 \subsection{Sprint Planning/Backlog}
 
-\paragraph{Tytu³ zadania.} Dodawanie i edycja danych osbowych.
+\paragraph{Tytu³ zadania.} Dodawanie i edycja danych osobowych.
 \begin{itemize}
 	\item Estymata: XL
 \end{itemize}
 
 \paragraph{Tytu³ zadania.} Zamówienie towaru do magazynu.
-\begin{itemize}
-	\item Estymata: XL
-\end{itemize}
-
-\paragraph{Tytu³ zadania.} Dodawanie i edycja danych osbowych.
 \begin{itemize}
 	\item Estymata: XL
 \end{itemize}
