--- a/dokumentacja/zpi_doc_template.tex
+++ b/dokumentacja/zpi_doc_template.tex
@@ -474,7 +474,7 @@ Utworzy³em skrypt dziêki któremu zosta³a rozszerzona funkcjonalnoœæ aplikacji w 
 
 \paragraph{Tytu³ zadania.} Zestawienia sprzeda¿y
 \subparagraph{Wykonawca.} Micha³ W¹cha³a
-\subparagraph{Realizacja.} Utworzy³em wstêpne skrypty w jêzyku SQL s³u¿¹ce do generowania zestawieñ.
+\subparagraph{Realizacja.} Utworzy³em wstêpne skrypty w jêzyku SQL s³u¿¹ce do generowania zestawieñ, nie powiod³o siê niestety utworzenie funkcjonalnego skryptu PHP obs³uguj¹cego zestawienia..
 
 
 \subsection{Sprint Review/Demo}
@@ -518,6 +518,15 @@ Zadania zawarte w bie¿¹cym sprincie okaza³y siê zbyt obszerne. Uda³o siê wykonaæ
 
 \subsection{Realizacja}
 
+\paragraph{Tytu³ zadania.} Zestawienia sprzeda¿y
+\subparagraph{Wykonawca.} Micha³ W¹cha³a
+\subparagraph{Realizacja.} Utworzy³em w pe³ni dzia³aj¹cy skrypt PHP (zestawienia.php) wyœwietlaj¹cy zestawienia najczêœciej sprzedawanych produktów, tzw. "bestsellerów". Skrypt w czytelny sposób przy zastosowaniu kaskadowego arkusza danych, wyœwietla dane 5 najczêœciej kupowanych w naszej hurtowni produktów.
+
+
+\paragraph{Tytu³ zadania.} Edycja z poziomu podgl¹du.
+\subparagraph{Wykonawca.} Micha³ W¹cha³a
+\subparagraph{Realizacja.} Tworzê wstêpny skrypt pozwalaj¹cy na edycje zamówienia z poziomu podgl¹du koszyka.
+
 
 \paragraph{Tytu³ zadania.} Dodawanie i edycja danych osobowych
 \subparagraph{Wykonawca.} £ukasz Wide³
@@ -529,10 +538,6 @@ Zadania zawarte w bie¿¹cym sprincie okaza³y siê zbyt obszerne. Uda³o siê wykonaæ
 \subparagraph{Realizacja.} 
 
 
-\paragraph{Tytu³ zadania.} Zestawienia sprzeda¿y
-\subparagraph{Wykonawca.} Micha³ W¹cha³a
-\subparagraph{Realizacja.}
-
 \paragraph{Tytu³ zadania.} Zamówienie towaru do magazynu
 \subparagraph{Wykonawca.} £ukasz Wide³
 \subparagraph{Realizacja.} 
@@ -541,11 +546,6 @@ Zadania zawarte w bie¿¹cym sprincie okaza³y siê zbyt obszerne. Uda³o siê wykonaæ
 \paragraph{Tytu³ zadania.} Faktura na email
 \subparagraph{Wykonawca.} Jakub Wêglarz
 \subparagraph{Realizacja.} 
-
-
-\paragraph{Tytu³ zadania.} Edycja z poziomu podgl¹du
-\subparagraph{Wykonawca.} Micha³ W¹cha³a
-\subparagraph{Realizacja.}
 
 
 
