--- a/dokumentacja/zpi_doc_template.tex
+++ b/dokumentacja/zpi_doc_template.tex
@@ -463,7 +463,7 @@ Zaplanowany przyrost zosta³ osi¹gniêty z wy³¹czeniem generowania faktur, prezent
 \paragraph{Tytu³ zadania.} Dodawanie i edycja danych osobowych
 \subparagraph{Wykonawca.} £ukasz Wide³
 \subparagraph{Realizacja.} 
-Utworzy³em skrypt dziêki któremu zosta³a rozszerzona funkcjonalnoœæ aplikacji w postaci edycji danych osobowych klienta. Skrypt znajduje siê w pliku edytujdaneosobowe.php.
+Utworzy³em wstêpny skrypt dziêki któremu w pszysz³oœci bêdzie mo¿na edytowaæ dane osobowe klienta. Niestety zadanie nie powiod³o siê w ca³oœci i zostanie ono przeniesione do nastêpnego sprintu. Wstêpny skrypt znajduje siê w pliku edytujdaneosobowe.php.
 
 
 
@@ -531,6 +531,19 @@ Zadania zawarte w bie¿¹cym sprincie okaza³y siê zbyt obszerne. Uda³o siê wykonaæ
 \paragraph{Tytu³ zadania.} Dodawanie i edycja danych osobowych
 \subparagraph{Wykonawca.} £ukasz Wide³
 \subparagraph{Realizacja.} 
+Zosta³a rozszerzona funkcjonalnoœæ aplikacji w postaci edycji danych osobowych klienta. Skrypt znajduje siê w pliku edytujdaneosobowe.php. Klient ma mo¿liwoœæ edycji swoich danych osobowych tj:
+
+\begin{itemize}
+	\item Imiê
+	\item Nazwisko
+	\item Ulica zamieszkania
+	\item Miasto
+	\item Kod pocztowy
+	\item Telefon
+	\item NIP
+\end{itemize}
+
+
 
 
 \paragraph{Tytu³ zadania.} Generowanie faktur
@@ -541,6 +554,7 @@ Zadania zawarte w bie¿¹cym sprincie okaza³y siê zbyt obszerne. Uda³o siê wykonaæ
 \paragraph{Tytu³ zadania.} Zamówienie towaru do magazynu
 \subparagraph{Wykonawca.} £ukasz Wide³
 \subparagraph{Realizacja.} 
+Tworzê wstêpny skrypt do zamówienia towaru do magazynu...
 
 
 \paragraph{Tytu³ zadania.} Faktura na email
