--- a/dokumentacja/zpi_doc_template.tex
+++ b/dokumentacja/zpi_doc_template.tex
@@ -222,11 +222,12 @@ Micha³ W¹cha³a \\
 \paragraph{Priorytet.} Bardzo Wa¿ne.
 \paragraph{Definition of Done.} Pracownik mo¿e sprawdzaæ stany magazynowe produktów.
 
+
 \subsection{Backlog Item 13}
-\paragraph{Tytu³ zadania.} Edycja zamówienia z poziomu podgl¹du.
-\paragraph{Opis zadania.} Zaprojektowanie i wdro¿enie skryptu pozwalaj¹cego na edycjê zamówienia z poziomu podgl¹du.
-\paragraph{Priorytet.} Wa¿ne.
-\paragraph{Definition of Done.} Klient mo¿e poprawiæ zamówienie przed zatwierdzeniem.
+\paragraph{Tytu³ zadania.} Zestawienia
+\paragraph{Opis zadania.} Zaprojektowanie i wdro¿enie skryptu pozwalaj¹cego pracownikowi na podgl¹d zestawieñ sprzeda¿y.
+\paragraph{Priorytet.} Opcjonalne.
+\paragraph{Definition of Done.} Pracownik mo¿e podgl¹daæ zestawienia sprzeda¿y.
 
 \subsection{Backlog Item 14}
 \paragraph{Tytu³ zadania.} Pobieranie faktur.
@@ -253,10 +254,10 @@ Micha³ W¹cha³a \\
 \paragraph{Definition of Done.} Klient otrzymuje faktury na email.
 
 \subsection{Backlog Item 18}
-\paragraph{Tytu³ zadania.} Zestawienia
-\paragraph{Opis zadania.} Zaprojektowanie i wdro¿enie skryptu pozwalaj¹cego pracownikowi na podgl¹d zestawieñ sprzeda¿y.
-\paragraph{Priorytet.} Opcjonalne.
-\paragraph{Definition of Done.} Pracownik mo¿e podgl¹daæ zestawienia sprzeda¿y.
+\paragraph{Tytu³ zadania.} Edycja zamówienia z poziomu podgl¹du.
+\paragraph{Opis zadania.} Zaprojektowanie i wdro¿enie skryptu pozwalaj¹cego na edycjê zamówienia z poziomu podgl¹du.
+\paragraph{Priorytet.} Opcjonalne
+\paragraph{Definition of Done.} Klient mo¿e poprawiæ zamówienie przed zatwierdzeniem.
 
 
 
