--- a/dokumentacja/zpi_doc_template.tex
+++ b/dokumentacja/zpi_doc_template.tex
@@ -470,7 +470,7 @@ Utworzy³em wstêpny skrypt dziêki któremu w pszysz³oœci bêdzie mo¿na edytowaæ dan
 
 \paragraph{Tytu³ zadania.} Generowanie faktur
 \subparagraph{Wykonawca.} Jakub Wêglarz
-\subparagraph{Realizacja.} 
+\subparagraph{Realizacja.} Generowanie faktur mia³o byæ oparte na zewnêtrznej bibliotece FPDF, jednak biblioteka ta okaza³a siê byæ bardzo skomplikowana w obs³udze i czêœciowo wadliwa co bardzo wyd³u¿y³oby okres rozwijania tej wersji oprogramowania. W nastêpnym sprincie przygotujê lepsze i ³atwiejsze rozwi¹zanie.
 
 
 \paragraph{Tytu³ zadania.} Zestawienia sprzeda¿y
@@ -549,7 +549,8 @@ Zosta³a rozszerzona funkcjonalnoœæ aplikacji w postaci edycji danych osobowych k
 
 \paragraph{Tytu³ zadania.} Generowanie faktur
 \subparagraph{Wykonawca.} Jakub Wêglarz
-\subparagraph{Realizacja.} 
+\subparagraph{Realizacja.} Napisa³em w³asn¹ metodê pozwalaj¹c¹ na wyœwietlanie i drukowanie faktur.
+Klient ma dostêp tylko i wy³¹cznie do swoich dokumentów wiêc zostaje zachowana tajemnica handlowa, pracownik natomiast, z wiadomych wzglêdów - mo¿e przegl¹daæ dokumenty sprzeda¿y wszystkich klientów.
 
 
 \paragraph{Tytu³ zadania.} Zamówienie towaru do magazynu
@@ -557,10 +558,6 @@ Zosta³a rozszerzona funkcjonalnoœæ aplikacji w postaci edycji danych osobowych k
 \subparagraph{Realizacja.} 
 Tworzê wstêpny skrypt do zamówienia towaru do magazynu...
 
-
-\paragraph{Tytu³ zadania.} Faktura na email
-\subparagraph{Wykonawca.} Jakub Wêglarz
-\subparagraph{Realizacja.} 
 
 
 
